# getting-started-with-secure-embedded-systems

./: .gitignore  .gitmodules  LICENSE  README.md  VirtualMachine.md  libtock-c.nix  rust-toolchain  tock.nix
.github/workflows/: build.yml
chapter_10/applications/drivers/: Makefile  led_matrix_text.c
chapter_10/kernel/drivers/src/: led_matrix_text.rs  lib.rs
chapter_10/kernel/microbit_v2/src/: main.rs
chapter_10/kernel/raspberry_pi_pico/: Makefile  layout.ld
chapter_10/kernel/raspberry_pi_pico/src/: main.rs
chapter_12/applications/drivers/: Makefile  text_display.c  text_display.h
chapter_12/applications/example_app/: Makefile  main.c
chapter_12/applications/text_display/: Makefile  main.c
chapter_12/kernel/drivers/: Cargo.toml
chapter_12/kernel/drivers/src/: lib.rs
chapter_12/kernel/raspberry_pi_pico/: Cargo.toml
chapter_12/kernel/raspberry_pi_pico/src/: main.rs
chapter_7/applications/drivers/: digit_letter_display.c  digit_letter_display.h
chapter_7/applications/example_app/: Makefile  main.c
chapter_7/kernel/drivers/src/: digit_letter_display.rs  lib.rs
chapter_7/kernel/microbit_v2/src/: main.rs
chapter_7/kernel/raspberry_pi_pico/src/: main.rs
chapter_8/applications/drivers/: Makefile  digit_letter_display.h  text_display.c  text_display.h
chapter_8/applications/example_app/: Makefile  main.c
chapter_8/kernel/drivers/src/: digit_letter_display.rs  lib.rs  text_display.rs
chapter_8/kernel/microbit_v2/: layout.ld
chapter_8/kernel/microbit_v2/src/: main.rs
chapter_8/kernel/raspberry_pi_pico/src/: main.rs
chapter_9/applications/drivers/: Makefile  led_matrix_text.c  led_matrix_text.h  text_display.c
chapter_9/applications/example_app/: Makefile  main.c
chapter_9/kernel/drivers/src/: led_matrix_text.rs  lib.rs  text_display.rs
chapter_9/kernel/microbit_v2/: Cargo.toml  Makefile
chapter_9/kernel/microbit_v2/src/: main.rs
chapter_9/kernel/raspberry_pi_pico/src/: main.rs
