[package]
name = "drivers"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2018"

[dependencies]
kernel = { path = "../../../tock/kernel" }
enum_primitive = { path = "../../../tock/libraries/enum_primitive" }
tickv = { path = "../../../tock/libraries/tickv" }
