[package]
name = "microbit_v2"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
cortexm4 = { path = "../../../tock/arch/cortex-m4" }
capsules = { path = "../../../tock/capsules" }
kernel = { path = "../../../tock/kernel" }
nrf52 = { path = "../../../tock/chips/nrf52" }
nrf52833 = { path = "../../../tock/chips/nrf52833" }
components = { path = "../../../tock/boards/components" }
nrf52_components = { path = "../../../tock/boards/nordic/nrf52_components" }

drivers = { path = "../drivers" }

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
codegen-units = 1
